Fixed overflow.

--- a/src/main/resources/static/css/floating-squares.css
+++ b/src/main/resources/static/css/floating-squares.css
@@ -6,6 +6,7 @@
     width: 100%;
     height: 100%;
     top: 0;
+    overflow: hidden;
 }
 
 .square {
